<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_movies">

    <fragment
        android:id="@+id/navigation_movies"
        android:name="com.erpambudi.moviecatalogue.ui.movies.MoviesFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_movies" />

    <fragment
        android:id="@+id/navigation_tvshow"
        android:name="com.erpambudi.moviecatalogue.ui.tvshow.TvShowFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_tvshow" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.erpambudi.moviecatalogue.ui.favorite.FavoriteFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_favorite" />

</navigation>