<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/progress"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="false"
                android:layout_alignParentTop="false"
                android:layout_alignParentEnd="false"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/iv_img_film"
                android:layout_width="120dp"
                android:layout_height="170dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/image_film" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_toEndOf="@id/iv_img_film"
                android:text="@string/name_film"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/iv_img_film"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title_release_date"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_name"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:text="@string/release_date"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/tv_release_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/iv_img_film"
                app:layout_constraintTop_toBottomOf="@+id/tv_name" />

            <TextView
                android:id="@+id/tv_release_date"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_title_release_date"
                android:layout_marginStart="32dp"
                android:layout_marginBottom="8dp"
                android:ellipsize="end"
                android:text="@string/release_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/iv_img_film"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_release_date" />

            <TextView
                android:id="@+id/tv_title_rating"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_release_date"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:text="@string/rating"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/iv_img_film"
                app:layout_constraintTop_toBottomOf="@+id/tv_release_date" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="3dp"
                android:contentDescription="@string/icon_rating"
                android:src="@drawable/ic_star_yellow"
                app:layout_constraintStart_toEndOf="@+id/iv_img_film"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_rating" />

            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_title_release_date"
                android:layout_marginStart="6dp"
                android:ellipsize="end"
                android:text="@string/rating"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_rating" />


            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:text="@string/title_overview"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_img_film" />

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/lorem"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>